--- a/central_privacidade.html
+++ b/central_privacidade.html
@@ -9,17 +9,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
     <link rel="shortcut icon" href="assets/images/logo-h_lopz73ne.png" type="image/x-icon">
     <meta name="description" content="">
-    <title>+ Mais</title>
+    <title>Page 5</title>
     <link rel="stylesheet"
-        href="https://r.mobirisesite.com/338150/assets/bootstrap/css/bootstrap.min.css?rnd=1699485025623">
+        href="https://r.mobirisesite.com/338150/assets/bootstrap/css/bootstrap.min.css?rnd=1699485025688">
     <link rel="stylesheet"
-        href="https://r.mobirisesite.com/338150/assets/bootstrap/css/bootstrap-grid.min.css?rnd=1699485025623">
+        href="https://r.mobirisesite.com/338150/assets/bootstrap/css/bootstrap-grid.min.css?rnd=1699485025688">
     <link rel="stylesheet"
-        href="https://r.mobirisesite.com/338150/assets/bootstrap/css/bootstrap-reboot.min.css?rnd=1699485025623">
-    <link rel="stylesheet" href="https://r.mobirisesite.com/338150/assets/dropdown/css/style.css?rnd=1699485025623">
-    <link rel="stylesheet" href="https://r.mobirisesite.com/338150/assets/socicon/css/styles.css?rnd=1699485025623">
-    <link rel="stylesheet" href="https://r.mobirisesite.com/338150/assets/theme/css/style.css?rnd=1699485025623">
-    <link rel="stylesheet" href="https://r.mobirisesite.com/338150/assets/css/mbr-additional.css?rnd=1699485025623"
+        href="https://r.mobirisesite.com/338150/assets/bootstrap/css/bootstrap-reboot.min.css?rnd=1699485025688">
+    <link rel="stylesheet" href="https://r.mobirisesite.com/338150/assets/dropdown/css/style.css?rnd=1699485025688">
+    <link rel="stylesheet" href="https://r.mobirisesite.com/338150/assets/socicon/css/styles.css?rnd=1699485025688">
+    <link rel="stylesheet" href="https://r.mobirisesite.com/338150/assets/theme/css/style.css?rnd=1699485025688">
+    <link rel="stylesheet" href="https://r.mobirisesite.com/338150/assets/css/mbr-additional.css?rnd=1699485025688"
         type="text/css">
 
 
@@ -29,14 +29,14 @@
 
 <body>
 
-    <section class="menu menu2 cid-tV2u0N8sIy" once="menu" id="menu2-19">
+    <section class="menu menu2 cid-tV2u0N8sIy" once="menu" id="menu2-1d">
 
         <nav class="navbar navbar-dropdown navbar-fixed-top navbar-expand-lg">
             <div class="container">
                 <div class="navbar-brand">
                     <span class="navbar-logo">
-                        <a href="index.html">
-                            <img src="assets/images/logo-h_lopz73ne.png" alt="Alppi" style="height: 3rem;">
+                        <a href="https://mobiri.se">
+                            <img src="assets/images/logo-h_lopz73ne.png" alt="Mobirise" style="height: 3rem;">
                         </a>
                     </span>
                     <span class="navbar-caption-wrap"><lt-highlighter contenteditable="false"
@@ -45,7 +45,7 @@
                                 style="width: 48.2969px !important; height: 19.2031px !important; transform: none !important; transform-origin: 24.1484px 9.60156px !important; zoom: 1 !important; margin-top: 23.7656px !important; margin-left: 101.547px !important;"><lt-div
                                     class="lt-highlighter__scroll-element"
                                     style="top: 0px !important; left: 0px !important; width: 48px !important; height: 23px !important;"></lt-div></lt-div></lt-highlighter><a
-                            class="navbar-caption text-primary display-7" href="index.html"
+                            class="navbar-caption text-primary display-7" href="https://mobiri.se"
                             data-lt-tmp-id="lt-964304" spellcheck="false" data-gramm="false">ALPPI</a></span>
                 </div>
                 <button class="navbar-toggler" type="button" data-toggle="collapse"
@@ -116,7 +116,84 @@
         </nav>
     </section>
 
-    <section class="footer7 cid-tV2sVe3Zxn" once="footers" id="footer7-1a">
+    <section class="content4 cid-tV3X55R8eA" id="content4-1f">
+
+
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="title col-md-12 col-lg-10">
+                    <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-2">
+                        <strong>Central de Privacidade</strong>
+                    </h3>
+                    <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-7">
+                        <div><strong><br></strong></div><br>
+                        <div><strong>Política de Privacidade e Proteção de Dados Pessoais
+                            </strong></div>
+                        <div>A <strong>ALPPI</strong>, prima pela transparência no tratamento de dados das pessoas com
+                            as quais se relaciona. Com a publicação da lei 13.709/2018 - Lei Geral de Privacidade e
+                            Proteção de Dados Pessoais (LGPD), reforçamos nossa Política de Privacidade e Proteção de
+                            Dados Pessoais e demonstramos nosso compromisso com o tratamento de dados (São quaisquer
+                            tipos de operações realizadas com dados pessoais, tais como o acesso, armazenamento,
+                            compartilhamento...) de estudantes, professores, familiares, parceiros e demais públicos que
+                            se relacionam com nossos serviços.</div><br>
+                        <div>
+                        </div>
+                        <div><strong>Dados Pessoais
+                            </strong></div>
+                        <div>Dados Pessoais são quaisquer informações que te identifiquem ou possam vir a te
+                            identificar, são informações atreladas a pessoa, tais como nacionalidade, nome, RG, CPF,
+                            etc...</div><br>
+                        <div>
+                        </div>
+                        <div><strong>Lei Geral de Proteção de Dados Pessoais
+                            </strong></div>
+                        <div>A Lei n° 13.709/2018 (Lei Geral de Proteção de Dados/LGPD) é a lei que garante sua
+                            autodeterminação informativa, garantindo a você o direito sobre seus dados pessoais e uma
+                            série de outros direitos sobre o tratamento desses.</div><br>
+                        <div>
+                        </div>
+                        <div><strong>Contato
+                            </strong></div>
+                        <div>A <strong>ALPPI </strong>assegura seus direitos, caso você deseje exercê-los, entre em
+                            contato conosco:
+                        </div>
+                        <div>- Patrick Berlatto Piccini | patrickbpiccini@hotmail.com | (54) 99209-3378
+                        </div>
+                        <div>- Vitalino Pitt | vitalinopitt@gmail.com | (54) 98115-2603</div>
+                        <div>
+                        </div>
+                        <div>
+                        </div>
+                        <div>
+                        </div>
+                        <div>
+                        </div>
+                        <div>
+                        </div>
+                        <div>
+                        </div>
+                        <div>
+                        </div>
+                        <div>
+                        </div>
+                        <div>
+                        </div>
+                        <div>
+                        </div>
+                        <div>
+                        </div>
+                        <div>
+                        </div>
+                        <div>
+                        </div>
+                    </h4>
+
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="footer7 cid-tV2sVe3Zxn" once="footers" id="footer7-1e">
 
 
 
@@ -128,32 +205,6 @@
                     <p class="mbr-text mb-0 mbr-fonts-style display-7">
                         © Copyright 2023 Alppi - All Rights Reserved
                     </p>
-                    <a href="central_privacidade.html" style="color: white;">
-                        <p class="mbr-text mb-0 mbr-fonts-style display-7">
-                            Central de Privacidade
-                        </p>
-                    </a>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section class="content4 cid-tV2DJmj0U5" id="content4-1b">
-
-
-        <div class="container">
-            <div class="row justify-content-center">
-                <div class="title col-md-12 col-lg-10">
-                    <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-2">
-                        <strong>Créditos</strong>
-                    </h3>
-                    <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-7"><strong>
-                            Ciência da Computação<br>ATITUS Educação</strong><br>Passo
-                        Fundo<br><br><strong>Alunos(s):<br></strong>Patrick Berlatto Piccini<br>Vitalino
-                        Pitt<br><br><strong>Disciplina</strong>:<br>TCC II<br><br><strong>Professor
-                            Orientador:<br></strong>Marcos Roberto dos Santos<div><br><strong><br></strong><br></div>
-                    </h4>
-
                 </div>
             </div>
         </div>
