fix: ajuste de bottle e retirada de caixa alta to texzto inicial

--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
         <div class="align-center container">
             <div class="row justify-content-center">
                 <div class="col-12 col-lg-12">
-                    <h1 class="mbr-section-title mbr-fonts-style mb-3 display-2"><strong>EXCELÊNCIA EM ANÁLISE DE DADOS
-                            EDUCACIONAIS!
+                    <h1 class="mbr-section-title mbr-fonts-style mb-3 display-2"><strong>Excelência em análise de dados
+                            educacionais!
                         </strong>
                         <div><strong><br></strong></div>
                     </h1>
