feat: criação de navbar dinamica

--- a/index.html
+++ b/index.html
@@ -46,9 +46,10 @@
                                 style="width: 48.2969px !important; height: 19.2031px !important; transform: none !important; transform-origin: 24.1484px 9.60156px !important; zoom: 1 !important; margin-top: 23.7656px !important; margin-left: 101.547px !important;"><lt-div
                                     class="lt-highlighter__scroll-element"
                                     style="top: 0px !important; left: 0px !important; width: 48px !important; height: 23px !important;"></lt-div></lt-div></lt-highlighter><a
-                            class="navbar-caption text-primary display-7" href="index.html"
-                            data-lt-tmp-id="lt-964304" spellcheck="false" data-gramm="false">ALPPI</a></span>
+                            class="navbar-caption text-primary display-7" href="index.html" data-lt-tmp-id="lt-964304"
+                            spellcheck="false" data-gramm="false">ALPPI</a></span>
                 </div>
+
                 <button class="navbar-toggler" type="button" data-toggle="collapse"
                     data-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -57,8 +58,12 @@
                         <span></span>
                         <span></span>
                         <span></span>
+
                     </div>
                 </button>
+
+
+
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true">
                         <li class="nav-item"><lt-highlighter contenteditable="false"
@@ -114,6 +119,7 @@
                             spellcheck="false" data-gramm="false">Área do Cliente</a></div>
                 </div>
             </div>
+
         </nav>
     </section>
 
@@ -234,6 +240,11 @@
     <script src="assets/ytplayer/index.js"></script>
     <script src="assets/dropdown/js/navbar-dropdown.js"></script>
     <script src="assets/theme/js/script.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.0.7/dist/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
+
 
 
 
