--- a/mais.html
+++ b/mais.html
@@ -138,24 +138,6 @@
         </div>
     </section>
 
-    <section class="footer7 cid-tV2sVe3Zxn" once="footers" id="footer7-1a">
-
-        <div class="container">
-            <div class="media-container-row align-center mbr-white">
-                <div class="col-12">
-                    <p class="mbr-text mb-0 mbr-fonts-style display-7">
-                        © Copyright 2023 Alppi - All Rights Reserved
-                    </p>
-                    <a href="central_privacidade.html" style="color: white;">
-                        <p class="mbr-text mb-0 mbr-fonts-style display-7">
-                            Central de Privacidade
-                        </p>
-                    </a>
-                </div>
-            </div>
-        </div>
-    </section>
-
 
     <script src="assets/web/assets/jquery/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>
@@ -163,6 +145,9 @@
     <script src="assets/ytplayer/index.js"></script>
     <script src="assets/dropdown/js/navbar-dropdown.js"></script>
     <script src="assets/theme/js/script.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.0.7/dist/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
 
 
