--- a/quemsomos.html
+++ b/quemsomos.html
@@ -135,7 +135,12 @@
                             <strong>Patrick Berlatto Piccini</strong>
                         </h3>
                         <p class="mbr-text mbr-fonts-style display-7">
-                            Desenvolvedor Back-End<br><br>Linked-In</p>
+                            Desenvolvedor Back-End<br><br></p>
+                        <a href="https://www.linkedin.com/in/patrick-berlatto-piccini/" style="color:black;  font-weight: bold;">
+                            <p class="mbr-text mb-0 mbr-fonts-style display-7">
+                                Linked-In
+                            </p>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -161,7 +166,12 @@
                             <strong>Vitalino Pitt</strong>
                         </h3>
                         <p class="mbr-text mbr-fonts-style display-7">
-                            Professor e Coordenador<br><br>Linked-In</p>
+                            Professor e Coordenador<br><br></p>
+                            <a href="https://www.linkedin.com/in/vitalinopitt/" style="color:black; font-weight: bold;">
+                                <p class="mbr-text mb-0 mbr-fonts-style display-7">
+                                    Linked-In
+                                </p>
+                            </a>
                     </div>
                 </div>
             </div>
@@ -197,6 +207,9 @@
     <script src="assets/ytplayer/index.js"></script>
     <script src="assets/dropdown/js/navbar-dropdown.js"></script>
     <script src="assets/theme/js/script.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.0.7/dist/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
 
 
