feat: Criação de link para arquivo PDF de TCC. fix: Correçã de erros capturados pelo Pitt

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
     <link rel="shortcut icon" href="assets/images/logo-h_lopz73ne.png" type="image/x-icon">
     <meta name="description" content="">
-    <title>Home</title>
+    <title>ALPPI</title>
     <link rel="stylesheet"
         href="https://r.mobirisesite.com/338150/assets/bootstrap/css/bootstrap.min.css?rnd=1699485024479">
     <link rel="stylesheet"
