--- a/mais.html
+++ b/mais.html
@@ -45,8 +45,8 @@
                                 style="width: 48.2969px !important; height: 19.2031px !important; transform: none !important; transform-origin: 24.1484px 9.60156px !important; zoom: 1 !important; margin-top: 23.7656px !important; margin-left: 101.547px !important;"><lt-div
                                     class="lt-highlighter__scroll-element"
                                     style="top: 0px !important; left: 0px !important; width: 48px !important; height: 23px !important;"></lt-div></lt-div></lt-highlighter><a
-                            class="navbar-caption text-primary display-7" href="index.html"
-                            data-lt-tmp-id="lt-964304" spellcheck="false" data-gramm="false">ALPPI</a></span>
+                            class="navbar-caption text-primary display-7" href="index.html" data-lt-tmp-id="lt-964304"
+                            spellcheck="false" data-gramm="false">ALPPI</a></span>
                 </div>
                 <button class="navbar-toggler" type="button" data-toggle="collapse"
                     data-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false"
@@ -130,9 +130,32 @@
                             Ciência da Computação<br>ATITUS Educação</strong><br>Passo
                         Fundo<br><br><strong>Alunos(s):<br></strong>Patrick Berlatto Piccini<br>Vitalino
                         Pitt<br><br><strong>Disciplina</strong>:<br>TCC II<br><br><strong>Professor
-                            Orientador:<br></strong>Marcos Roberto dos Santos<div><br><strong><br></strong><br></div>
+                            Orientador:<br></strong>Marcos Roberto dos Santos<div><br><strong><br></strong></div>
+                            <br>
+                            <a href="assets/images/TCC.pdf" style="color: #295872; font-weight: bold;">
+                                <strong>Clique aqui para acessar o TCC</strong>
+                            </a>
                     </h4>
 
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <br>
+    <section class="footer7 cid-tV2sVe3Zxn" once="footers" id="footer7-14">
+
+        <div class="container">
+            <div class="media-container-row align-center mbr-white">
+                <div class="col-12">
+                    <p class="mbr-text mb-0 mbr-fonts-style display-7">
+                        © Copyright 2023 Alppi - All Rights Reserved
+                    </p>
+                    <a href="central_privacidade.html" style="color: white;">
+                        <p class="mbr-text mb-0 mbr-fonts-style display-7">
+                            Central de Privacidade
+                        </p>
+                    </a>
                 </div>
             </div>
         </div>
