--- a/quemsomos.html
+++ b/quemsomos.html
@@ -135,22 +135,22 @@
                             <strong>Patrick Berlatto Piccini</strong>
                         </h3>
                         <p class="mbr-text mbr-fonts-style display-7">
-                            Desenvolvedor Back-End<br><br></p>
+                            Desenvolvedor Back-End<br></p>
                         <a href="https://www.linkedin.com/in/patrick-berlatto-piccini/" style="color:black;  font-weight: bold;">
                             <p class="mbr-text mb-0 mbr-fonts-style display-7">
                                 Linked-In
                             </p>
                         </a>
+                        <br>
+                        <br>
                     </div>
                 </div>
             </div>
         </div>
     </section>
 
+
     <section class="image1 cid-tV2qoGqd1f" id="image1-k">
-
-
-
 
         <div class="container">
             <div class="row align-items-center">
@@ -166,23 +166,23 @@
                             <strong>Vitalino Pitt</strong>
                         </h3>
                         <p class="mbr-text mbr-fonts-style display-7">
-                            Professor e Coordenador<br><br></p>
+                            Professor e Coordenador<br></p>
                             <a href="https://www.linkedin.com/in/vitalinopitt/" style="color:black; font-weight: bold;">
                                 <p class="mbr-text mb-0 mbr-fonts-style display-7">
                                     Linked-In
                                 </p>
                             </a>
+                        <br>
+                        <br>
                     </div>
                 </div>
             </div>
         </div>
     </section>
+    
+    <br><br>
 
-    <section class="footer7 cid-sFF3CYc3p7" once="footers" id="footer7-9">
-
-
-
-
+    <section class="footer7 cid-tV2sVe3Zxn" once="footers" id="footer7-14">
 
         <div class="container">
             <div class="media-container-row align-center mbr-white">
@@ -199,6 +199,8 @@
             </div>
         </div>
     </section>
+
+
 
 
     <script src="assets/web/assets/jquery/jquery.min.js"></script>
