--- a/central_privacidade.html
+++ b/central_privacidade.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
     <link rel="shortcut icon" href="assets/images/logo-h_lopz73ne.png" type="image/x-icon">
     <meta name="description" content="">
-    <title>Page 5</title>
+    <title>Central de Privacidade</title>
     <link rel="stylesheet"
         href="https://r.mobirisesite.com/338150/assets/bootstrap/css/bootstrap.min.css?rnd=1699485025688">
     <link rel="stylesheet"
@@ -35,8 +35,8 @@
             <div class="container">
                 <div class="navbar-brand">
                     <span class="navbar-logo">
-                        <a href="https://mobiri.se">
-                            <img src="assets/images/logo-h_lopz73ne.png" alt="Mobirise" style="height: 3rem;">
+                        <a href="index.html">
+                            <img src="assets/images/logo-h_lopz73ne.png" alt="Alppi" style="height: 3rem;">
                         </a>
                     </span>
                     <span class="navbar-caption-wrap"><lt-highlighter contenteditable="false"
