fix: ajustes de textos

--- a/alppi.html
+++ b/alppi.html
@@ -132,7 +132,7 @@
                         <img src="assets/images/background6-h_loq18xki.jpg" alt="Mobirise">
                     </div>
 
-                    <p class="mbr-text mbr-fonts-style display-7"><br>A marca <strong>ALPPI </strong>evoca os Alpes,
+                    <p class="mbr-text mbr-fonts-style display-7" style="color:black ;"><br>A marca <strong>ALPPI </strong>evoca os Alpes,
                         cuja forma se assemelha a gráficos conforme a imagem e a linha em forma de seta.<br>Observar a
                         Educação de uma perspectiva superior amplia a visão e revela detalhes, como exatamente os
                         gráficos fazem.<br>Os dois <strong>"PP"</strong> da marca, representam as iniciais dos
