--- a/mais.html
+++ b/mais.html
@@ -128,11 +128,11 @@
                     </h3>
                     <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-7"><strong>
                             Ciência da Computação<br>ATITUS Educação</strong><br>Passo
-                        Fundo<br><br><strong>Alunos(s):<br></strong>Patrick Berlatto Piccini<br>Vitalino
+                        Fundo<br><br><strong>Alunos:<br></strong>Patrick Berlatto Piccini<br>Vitalino
                         Pitt<br><br><strong>Disciplina</strong>:<br>TCC II<br><br><strong>Professor
                             Orientador:<br></strong>Marcos Roberto dos Santos<div><br><strong><br></strong></div>
                             <br>
-                            <a href="assets/images/TCC.pdf" style="color: #295872; font-weight: bold;">
+                            <a href="files/TCC.pdf" style="color: #295872; font-weight: bold;">
                                 <strong>Clique aqui para acessar o TCC</strong>
                             </a>
                     </h4>
