fix: novo arquivo TCC anexado, nova imagem do Pitt e aontamento para o portal com url correta

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
     <link rel="shortcut icon" href="assets/images/logo.png" type="image/x-icon">
     <meta name="description" content="">
-    <title>ALPPI</title>
+    <title>Alppi</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
@@ -111,7 +111,7 @@
                                     class="lt-highlighter__scroll-element"
                                     style="top: 0px !important; left: 0px !important; width: 163.828px !important; height: 45.5781px !important;"></lt-div></lt-div></lt-highlighter><a
                             class="btn btn-primary display-4"
-                            href='https://tcc-frontend-kbq4tuuav-patrickpiccini.vercel.app/' data-lt-tmp-id="lt-284964"
+                            href='https://alppi.alppi.com.br/#/login' target="_blank" rel="noopener noreferrer" data-lt-tmp-id="lt-284964"
                             spellcheck="false" data-gramm="false">Área do Cliente</a></div>
                 </div>
             </div>
