--- a/mais.html
+++ b/mais.html
@@ -109,7 +109,7 @@
                                     class="lt-highlighter__scroll-element"
                                     style="top: 0px !important; left: 0px !important; width: 163.828px !important; height: 45.5781px !important;"></lt-div></lt-div></lt-highlighter><a
                             class="btn btn-primary display-4"
-                            href='https://tcc-frontend-kbq4tuuav-patrickpiccini.vercel.app/' data-lt-tmp-id="lt-284964"
+                            href='https://alppi.alppi.com.br/#/login' target="_blank" rel="noopener noreferrer" data-lt-tmp-id="lt-284964"
                             spellcheck="false" data-gramm="false">Área do Cliente</a></div>
                 </div>
             </div>
