--- a/central_privacidade.html
+++ b/central_privacidade.html
@@ -46,7 +46,7 @@
                                     class="lt-highlighter__scroll-element"
                                     style="top: 0px !important; left: 0px !important; width: 48px !important; height: 23px !important;"></lt-div></lt-div></lt-highlighter><a
                             class="navbar-caption text-primary display-7" href="https://mobiri.se"
-                            data-lt-tmp-id="lt-964304" spellcheck="false" data-gramm="false">ALPPI</a></span>
+                            data-lt-tmp-id="lt-964304" spellcheck="false" data-gramm="false">Alppi</a></span>
                 </div>
                 <button class="navbar-toggler" type="button" data-toggle="collapse"
                     data-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false"
@@ -109,7 +109,7 @@
                                     class="lt-highlighter__scroll-element"
                                     style="top: 0px !important; left: 0px !important; width: 163.828px !important; height: 45.5781px !important;"></lt-div></lt-div></lt-highlighter><a
                             class="btn btn-primary display-4"
-                            href='https://tcc-frontend-kbq4tuuav-patrickpiccini.vercel.app/' data-lt-tmp-id="lt-284964"
+                            href='https://alppi.alppi.com.br/#/login' target="_blank" rel="noopener noreferrer"  data-lt-tmp-id="lt-284964"
                             spellcheck="false" data-gramm="false">Área do Cliente</a></div>
                 </div>
             </div>
