--- a/quemsomos.html
+++ b/quemsomos.html
@@ -46,7 +46,7 @@
                                     class="lt-highlighter__scroll-element"
                                     style="top: 0px !important; left: 0px !important; width: 48px !important; height: 23px !important;"></lt-div></lt-div></lt-highlighter><a
                             class="navbar-caption text-primary display-7" href="index.html"
-                            data-lt-tmp-id="lt-964304" spellcheck="false" data-gramm="false">ALPPI</a></span>
+                            data-lt-tmp-id="lt-964304" spellcheck="false" data-gramm="false">Alppi</a></span>
                 </div>
                 <button class="navbar-toggler" type="button" data-toggle="collapse"
                     data-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false"
@@ -109,7 +109,7 @@
                                     class="lt-highlighter__scroll-element"
                                     style="top: 0px !important; left: 0px !important; width: 163.828px !important; height: 45.5781px !important;"></lt-div></lt-div></lt-highlighter><a
                             class="btn btn-primary display-4"
-                            href='https://tcc-frontend-kbq4tuuav-patrickpiccini.vercel.app/' data-lt-tmp-id="lt-284964"
+                            href='https://alppi.alppi.com.br/#/login' target="_blank" rel="noopener noreferrer" data-lt-tmp-id="lt-284964"
                             spellcheck="false" data-gramm="false">Área do Cliente</a></div>
                 </div>
             </div>
@@ -124,7 +124,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-12 col-lg-4">
-                    <div style="height: 550px;" class="image-wrapper">
+                    <div class="image-wrapper">
                         <img src="assets/images/patrick.jpg" alt="Mobirise">
 
                     </div>
@@ -156,7 +156,7 @@
             <div class="row align-items-center">
                 <div class="col-12 col-lg-4">
                     <div class="image-wrapper">
-                        <img src="assets/images/4-h_loqd1ow8.jpg" alt="Mobirise">
+                        <img  src="assets/images/4-h_loqd1ow8.jpg" alt="Mobirise">
 
                     </div>
                 </div>
@@ -166,7 +166,7 @@
                             <strong>Vitalino Pitt</strong>
                         </h3>
                         <p class="mbr-text mbr-fonts-style display-7">
-                            Professor e Coordenador<br></p>
+                            Professor e Coordenador Pedagógico<br></p>
                             <a href="https://www.linkedin.com/in/vitalinopitt/" style="color:black; font-weight: bold;">
                                 <p class="mbr-text mb-0 mbr-fonts-style display-7">
                                     Linked-In
