fix: novo arquivo TCC anexado, nova imagem do Pitt e aontamento para o portal com url correta

--- a/quemsomos.html
+++ b/quemsomos.html
@@ -156,7 +156,7 @@
             <div class="row align-items-center">
                 <div class="col-12 col-lg-4">
                     <div class="image-wrapper">
-                        <img  src="assets/images/4-h_loqd1ow8.jpg" alt="Mobirise">
+                        <img  src="assets/images/vitalino.jpg" alt="Mobirise">
 
                     </div>
                 </div>
