--- a/quemsomos.html
+++ b/quemsomos.html
@@ -135,7 +135,7 @@
                             <strong>Patrick Berlatto Piccini</strong>
                         </h3>
                         <p class="mbr-text mbr-fonts-style display-7">
-                            Desenvolvedor Back-End<br></p>
+                            Software Engineer<br></p>
                         <a href="https://www.linkedin.com/in/patrick-berlatto-piccini/" style="color:black;  font-weight: bold;">
                             <p class="mbr-text mb-0 mbr-fonts-style display-7">
                                 Linked-In
